# cheesemap

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  example.cpp
example/cmake/modules/: FindLASLIB.cmake  FindSHAPELIB.cmake
example/include/: FileReader.hpp  Spherical_search.hpp  TxtFileReader.hpp  handlers.hpp
include/cellmap/: cellmap.hpp
include/cellmap/concepts/: Filter.hpp  Kernel.hpp  concepts.hpp
include/cellmap/maps/: dense2d.hpp
include/cellmap/utils/: Cell.hpp
include/cheesemap/: cheesemap.hpp
include/cheesemap/concepts/: Kernel.hpp  concepts.hpp
include/cheesemap/kernels/: Cube.hpp  Sphere.hpp  kernels.hpp
include/cheesemap/maps/: CMap.hpp  Dense.hpp  Dense2D.hpp  Dense3D.hpp  IMap.hpp  Mixed.hpp  Mixed2D.hpp  Mixed3D.hpp  OldDense.hpp  OldMixed2D.hpp  OldMixed3D.hpp  OldSparse.hpp  SmartSlice.hpp  Sparse.hpp  Sparse2D.hpp  Sparse3D.hpp  dense2d.hpp  maps.hpp
include/cheesemap/utils/: Box.hpp  Cartesian.hpp  Cell.hpp  Point.hpp  arithmetic.hpp  execution.hpp  flags.hpp  inline.hpp  sorted_vector.hpp  type_traits.hpp
test/: CMakeLists.txt
test/include/: generic_tests.hpp  mockup_data.hpp  timing.hpp  utils.hpp
test/source/: cellmap_test.cpp  chs_box.cpp  chs_cell.cpp  chs_dense.cpp  chs_dense2d.cpp  chs_dense3d.cpp  chs_exists.cpp  chs_mixed2d.cpp  chs_mixed3d.cpp  chs_smart_slice.cpp  chs_sorted_vector.cpp  chs_sparse.cpp  chs_sparse2d.cpp  chs_sparse3d.cpp  chs_sphere.cpp
